--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>L7C2</title>
+    <title>L7H22</title>
     <script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script>
 </head>
 <body>
     <a-scene embedded style="width: 100vw; height: 100vh;">
-        <a-sky src="daytime.jpg"></a-sky>
+        <a-sky src="..\static\daytime.jpg"></a-sky>
 
    
         <a-box position="0 3 -3" scale="0.5 0.5 0.5" color="red" animation="property: rotation; to: 0 360 0; loop: true; dur: 8000"></a-box>
